attempting to fix alignment of footer

--- a/src/components/LandingPage/LandingPageStyles.scss
+++ b/src/components/LandingPage/LandingPageStyles.scss
@@ -186,6 +186,11 @@ a.nasa_logo {
         text-align: center;
     }
 
+    .footer_nav {
+        width:100%;
+        text-align: center;
+    }
+
     ul {
         list-style: none;
     }
